--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,6 @@
 
 .center-screen {
     margin: auto;
-    width: 50%;
-    // border: 3px solid green;
+    width: auto;
+    max-width: 1000px;
 }
