--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-@for (faceSnapsElement of faceSnaps; track faceSnapsElement.title){
-    <app-face-snap [faceSnap]="faceSnapsElement"/>
-}
-
+<app-header/>
+<div class="center-screen">
+    <app-face-snap-list/>
+</div>
