--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,6 @@
 * {
     font-family: Roboto, Helvetica, sans-serif;
+    margin: 0px;
 }
 
 
-.center-screen {
-    margin: auto;
-    width: auto;
-    max-width: 1000px;
-}
