--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -1,12 +1,12 @@
 <div class="face-snap-scss" [ngClass]="{ snapped : faceSnap.userLiked }">
-    <h2>{{ faceSnap.title }}</h2>
+    <h2>{{ faceSnap.title | uppercase }}</h2>
     <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
-    <p>{{ faceSnap.description }}</p>
-    <p>Mis en ligne le {{ faceSnap.createdAt }}</p>
+    <p>{{ faceSnap.description | titlecase }}</p>
+    <p>Mis en ligne le {{ faceSnap.createdAt.toString() | date: 'd MMMM yyyy, à HH:mm' }}</p>
     @if (faceSnap.location) { <p>Localisation: {{ faceSnap.location }}</p> } @else { <p>Localisation non spécifiée</p> }
     <p>
         <button (click)="faceSnap.onLike()">{{ faceSnap.LikeButtonText }}</button>
-        <span [ngStyle]="{ color: 'rgb(' + faceSnap.like + ',0 ,0)'}">{{ faceSnap.like }} </span>
+        <span [ngStyle]="{ color: 'rgb(' + faceSnap.like + ',0 ,0)'}">{{ faceSnap.like | number }} </span>
     </p>
 </div>
 
