--- a/src/app/face-snap/face-snap.component.scss
+++ b/src/app/face-snap/face-snap.component.scss
@@ -1,10 +1,12 @@
 .face-snap-scss {
     box-sizing: border-box;
     margin: 20px auto;
-    padding: 10px 30px;
+    padding: 30px 30px;
     box-shadow: lightgray 4px 4px 20px;
     img { width: 100%; }
     p {
+        margin-bottom: 10px;
+        margin-top: 10px;
         font-weight: 300;
         font-size: 16px;
     }
